--- a/Changes
+++ b/Changes
@@ -11,7 +11,7 @@ Version ?? (unreleased)
  - Allow use of $ENV{DBDPG_TEMPDIR} to shorten test directory paths.
    (Github issue #78)
 
- - Switch from DynaLoader to XSLoader when possible
+ - Switch from DynaLoader to XSLoader
    [Todd Rinaldo <toddr@cpan.org>]
    (Github pull request #76)
 
