--- a/Changes
+++ b/Changes
@@ -7,6 +7,9 @@ Version 3.16.1 (unreleased)
 
  - Add a META.json file; rename META.yml to META.yaml
 
+ - Fix 03smethod.t $sth->last_insert_id skip count for DBI < 1.642
+   [Dagfinn Ilmari Mannsåker]
+   (Github issue #99)
 
 Version 3.16.0 (August 8, 2022)
 
