--- a/Changes
+++ b/Changes
@@ -3,6 +3,13 @@ Changes for the DBD::Pg module
 RT refers to rt.cpan.org
 
 
+Version 3.16.2 (unreleased)
+
+ - Force test suite to use a specific shell for the initdb command
+   [Ed Sabol]
+   (Github issue #104)
+
+
 Version 3.16.1 (released March 5, 2023)
 
  - Add new attribute "pg_int8_as_string", for backwards compatibility.
