--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
+Version 3.16.3  (released April 4, 2023)
+
+ - Fix to remove MYMETA files added by mistake to tarball
+
 
 Version 3.16.2  (released April 4, 2023)
 
