--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
-Version 3.17.0 (unreleased)
+Version 3.17.0  (released August 23, 2023)
 
  - New database handle attribute pg_skip_deallocate
    Prevents any deallocation of automatically prepared 
