--- a/Changes
+++ b/Changes
@@ -2,6 +2,12 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
+Version 3.18.0 (unreleased)
+
+ - Support new PQclosePrepared function, added in Postgres 17
+   [Greg Sabino Mullane]
+
+
 Version 3.17.0  (released August 23, 2023)
 
  - New database handle attribute pg_skip_deallocate
