--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
-Version 3.18.0 (unreleased)
+Version 3.18.0 (released December 4, 2023)
 
  - Support new PQclosePrepared function, added in Postgres 17
    [Greg Sabino Mullane]
