--- a/README
+++ b/README
@@ -6,7 +6,7 @@ DBD::Pg  --  the DBI PostgreSQL interface for Perl
 DESCRIPTION:
 ------------
 
-This is version 3.17.0 of DBD::Pg, the Perl interface to Postgres using DBI.
+This is version 3.18.0 of DBD::Pg, the Perl interface to Postgres using DBI.
 The web site for this interface, and the latest version, can be found at:
 
 	http://search.cpan.org/dist/DBD-Pg/
@@ -14,6 +14,9 @@ The web site for this interface, and the latest version, can be found at:
 The mailing list is at:
 
     http://www.nntp.perl.org/group/perl.dbd.pg/
+
+Subscribe with an email to dbd-pg-subscribe@perl.org
+
 
 The development of DBD::Pg can be tracked at:
 
@@ -37,7 +40,7 @@ REQUIREMENTS:
 DBD::Pg needs to know where to find the libpq libraries: this is usually done 
 by checking the output of the pg_config executable. If pg_config is not available, 
 then you may need to install the development package for PostgreSQL. To do this 
-on Debian and Ubuntu, use: apt-get install libpq-dev; on RedHat and CentOS, 
+on Debian and Ubuntu, use: apt-get install libpq-dev; on RedHat, CentOS, etc. 
 use: yum install postgresql-devel. Note that the development libraries are needed 
 even if you already have PostgreSQL up and running.
 
