Clean up Changes file for upcoming release [skip ci]

--- a/Changes
+++ b/Changes
@@ -5,39 +5,51 @@ RT refers to rt.cpan.org
 
 Version 3.19.0  (unreleased)
 
- - Much improved async support
+ - Support for asynchronous connect via PQconnectStart/ PQconnectPoll
+   [Rainer Weikusat]
+   (Github pull request #141)
+
+ - Use PQsendPrepare instead of PQprepare for async queries
+   [Rainer Weikusat]
+   (Github pull request #142)
 
  - Many cleanups and improvements to the cancel functions
    [Rainer Weikusat]
-   (Github issue #145 and #152)
+   (Github pull requests #145 and #152)
 
  - Prevent pg_error_field() from modifying string
    [Lukas Mai]
-   (Github issue #157 and #158)
+   (Github issue #157 and pull request #158)
 
  - Speed up quote_name using binary search
    Also a new test t/01keywords.t
    [Michael Conrad]
-   (Github issue #124)
+   (Github pull request #124)
 
  - Support binding native boolean false on Perl 5.36 and newer
    [Dagfinn Ilmari Mannsåker]
 
  - Respect pg_bool_tf when binding native booleans on Perl 5.36 and newer
    [Dagfinn Ilmari Mannsåker]
-   (Github issue #125 and #129)
-
- - C23 compliance for functions taking variable number of arguments
-   [Rainer Weikusat]
-   (Github issue #148)
+   (Github issue #125 and pull request #129)
 
  - Require ExtUtils::MakeMaker 7.64
    [brian d foy]
-   (Github issue #148)
+   [Rainer Weikusat]
+   (Github issue #69)
+   (Github pull requests #137 #155)
+
+ - C23 compliance for functions taking variable number of arguments
+   [Rainer Weikusat]
+   (Github pull request #148)
 
  - Separate $username and $password from DSN parameters in POD
    [Daniel Böhmer]
-   (Github issue #149)
+   (Github pull request #149)
+
+ - Add example for using RETURNING in "insert into foo (...) returning id"
+   [H.Merijn Brand]
+   (Github pull request #134)
 
  - Do not use TMPDIR if we are providing a path via DBDPG_TEMDIR environment variable.
    [Greg Sabino Mullane]
